Fix: Message Bar overflow

--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -33,8 +33,7 @@
 		float: left;
 		position: relative;
 		height: 100%;
-		width: 20%;
-		min-width: 260px;
+		width: 240px;
 		/*border-right: 1px solid rgba(100, 184, 100, 0.56);*/
 		overflow: hidden;
 	}
@@ -53,7 +52,7 @@
 	#profileinfo{
 		position: relative;
 		width: 85%;
-		height: 50px;
+		height: 10%;
 		background-color: white;
 		margin: 0 auto;
 		margin-top: 10px;
@@ -123,7 +122,7 @@
 		overflow-y: hidden;
 		position: absolute;
 		width: 95%;
-		height: 75%;
+		height: 72%;
 	}
 	#contactscontainer:hover{
 		overflow-y: auto; 
@@ -156,6 +155,7 @@
 
 	#rightpannel{
 		height: 100%;
+		margin-left: 240px;
 	}
 
 	#msgcontainer{
